# mimalloc-rs

./: Cargo.toml  build.rs
src/: lib.rs  main.rs
