[package]
name = "mimalloc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
compiler_builtins = {  version = "0.1.16", optional = true}
libc = { version = "0.2.153", default-features = false, features = ['rustc-dep-of-std']}
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }

[features]
rustc-dep-of-std = ['core', 'compiler_builtins']


